k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cv-webapp
  namespace: cv-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cv-webapp
  template:
    metadata:
      labels:
        app: cv-webapp
    spec:
      containers:
      - name: cv-webapp-container
        image: docker.io/hemsarz/cvresumechallenge:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
