k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cv-webapp-service
  namespace: cv-webapp
spec:
  type: LoadBalancer
  selector:
    app: cv-webapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
