k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cv-webapp-ingress
  namespace: cv-webapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: tfaz.work.gd
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cv-webapp-service
            port:
              number: 80
